[build] MAJ relative path link of flexboxgrid

--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -57,7 +57,7 @@ html(lang='en')
     link(rel='shortcut icon', href=require('images/favicons/favicon.ico'))
 
     //- Preload flexboxgrid
-    link(rel='stylesheet', href='../../assets/styles/flexboxgrid.min.css' type="text/css")
+    link(rel='stylesheet', href='/assets/styles/flexboxgrid.min.css' type="text/css")
 
     //- Preload fonts
     link(type='font/woff2', href=require('source/assets/fonts/montserrat-regular-webfont.woff2'), rel='prefetch', as='font', crossorigin)
