[Front] /apropos style and components added

--- a/src/assets/styles/_app.scss
+++ b/src/assets/styles/_app.scss
@@ -33,6 +33,7 @@
 @import './components/cardOffers';
 @import './components/pastilleLinkedin';
 @import './components/bandeau';
+@import './components/cardCheck';
 @import './components/allComponents';
 
 /*
