--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -11,6 +11,7 @@ include ../components/pictureitem.pug
 include ../components/labelIcon.pug
 include ../components/labelIcon.pug
 include ../components/cardOffers.pug
+include ../components/cardCheck.pug
 include ../components/button.pug
 include ../components/pastilleLinkedin.pug
 include ../components/bandeau.pug
@@ -64,10 +65,6 @@ html(lang='en')
     link(type='font/woff2', href=require('source/assets/fonts/montserrat-medium-webfont.woff2'), rel='prefetch', as='font', crossorigin)
     link(type='font/woff2', href=require('source/assets/fonts/montserrat-bold-webfont.woff2'), rel='prefetch', as='font', crossorigin)
     link(type='font/woff2', href=require('source/assets/fonts/montserrat-black-webfont.woff2'), rel='prefetch', as='font', crossorigin)
-    //- link(type='font/woff', href=require('source/assets/fonts/Quicksand-Bold.woff'), rel='prefetch', as='font', crossorigin)
-    //- link(type='font/woff', href=require('source/assets/fonts/Quicksand-Medium.woff'), rel='prefetch', as='font', crossorigin)
-    //- link(type='font/woff', href=require('source/assets/fonts/Quicksand-Regular.woff'), rel='prefetch', as='font', crossorigin)
-    //- link(type='font/woff', href=require('source/assets/fonts/Quicksand-Light.woff'), rel='prefetch', as='font', crossorigin)
 
     //- Title
     block title
