--- a/src/views/pages/all-components.pug
+++ b/src/views/pages/all-components.pug
@@ -121,8 +121,13 @@ block content
         h2 Components Bandeau Link
         +bandeau()
 
+    //- components Card check
+    section(style='text-align: center; margin: 50px 0').container-fluid
+        h2 Components Card check
+        .row.center-xs(style='margin-top: 50px')
+            .col-xs-6
+                +cardCheck()
+            .col-xs-6
+                +cardCheck()
     //- components Card tag different
     //- components Slider trust us
-
-    //- components Footer
-    +footer()
