--- a/src/views/pages/apropos.pug
+++ b/src/views/pages/apropos.pug
@@ -13,13 +13,27 @@ block manifestBrowserconfigFiles
 
 block content
 
-  //- Header
   +header('apropos')
 
-  //- Section Intro
-  +intro('apropos')
+  section#about-section01
+    +intro('apropos')
     block introContent
 
-  //- a propos page
-  section
-    h1 # a propos
+  section#about-section02.container-fluid
+    .row.between-xs
+      .col-xs-7
+        +titleLeftTxt('blue', 'Pourquoi nous faire,', 'confiance', 'Teksial CONSULTING, prestataire de services de conseil, vous accompagne dans la mise en oeuvre de vos projets IT, DIGITAL & MARKETING avec succès. Connaissance avancée du projet d\'entreprise, culturellement et stratégiquement beaucoup plus alignées avec les enjeux.Des intérêts communs : confiance dans la mise en place de l\'accompagnement & la transition DIGITALE (Optimisez, simplifiez, Digitalisez).')
+      .col-xs-5
+        +cardCheck()
+        +cardCheck()
+        +cardCheck()
+  section#about-section03.container-fluid
+    +titleCenterTxt('blue', 'Mais c\'est', 'aussi')
+      p
+    .row.center-xs
+      .col-xs-4
+        +bigPastilleDragable()
+      .col-xs-4
+        +bigPastilleDragable('Sécuriser vos solutions avec notre expertise', 'picture2', 'security')
+      .col-xs-4
+        +bigPastilleDragable('Accélérer votre business avec des solutions adaptées à vos besoins', 'picture3', 'speed up')
