--- a/src/assets/styles/components/_bigPastilleDragable.scss
+++ b/src/assets/styles/components/_bigPastilleDragable.scss
@@ -2,6 +2,7 @@
         position: relative;
         width: 353px;
         height: 353px;
+        margin: 0 auto;
     &-content {
         overflow: hidden;
         position: relative;
