--- a/src/assets/styles/components/_titleLeftTxt.scss
+++ b/src/assets/styles/components/_titleLeftTxt.scss
@@ -1,5 +1,7 @@
 .titleLeft {
     height: 100%;   
+    display: flex;
+    align-items: center;
     &_content {
         margin: 0 44px 0 136px;
         color: #ffffff;
