--- a/src/assets/styles/layout/_general.scss
+++ b/src/assets/styles/layout/_general.scss
@@ -36,12 +36,15 @@ li {
   list-style: none;
 }
 
-.section02,
-.section03,
-.section04,
-.section05,
-.section06,
-.section07 {
-  padding-top: 70px;
-  // padding-bottom: 50px;
+#home,
+#about {
+  &-section02,
+  &-section03,
+  &-section04,
+  &-section05,
+  &-section06,
+  &-section07 {
+    padding-top: 70px;
+    // padding-bottom: 50px;
+  }
 }
