--- a/src/assets/styles/pages/_index.scss
+++ b/src/assets/styles/pages/_index.scss
@@ -1,79 +1,85 @@
 /* src/assets/styles/pages/_index.scss  */
-.section01{
-}
-
-.section02 {
-  overflow: hidden;
-  background: linear-gradient(360deg, rgba(0, 159, 227, 0.15) 0%, rgba(255, 255, 255, 0) 100%);
-  height: 485px;
-  &_item {
-    transform: translateY(-180px);
-    position: relative;
-    // top: 180px;
+#home {
+  &-section01{
   }
-  & .titleCenter_content {
-    margin-top: 0;
-  }
-}
-
-.section03 {
-  // padding: 106px 72px;
-  padding-bottom: 50px;
-  &_background {
-    & img {
-      width: 80%;
-      margin: 0 auto;
+  
+  &-section02 {
+    overflow: hidden;
+    background: linear-gradient(360deg, rgba(0, 159, 227, 0.15) 0%, rgba(255, 255, 255, 0) 100%);
+    height: 485px;
+    &_item {
+      transform: translateY(-180px);
+      position: relative;
+      // top: 180px;
+    }
+    & .titleCenter_content {
+      margin-top: 0;
     }
   }
-  &_item {
-    text-align: center;
-    margin-top: 70px;
-    & span {
-      font-weight: 700;
-      text-transform: capitalize;
-      line-height: 25px;
-      font-size: 14px;
-    }
-  }
-  & .titleLeft_content{
-    margin: 0 0 30px 0;
-  }
-  & .littlePastille {
-    margin-bottom: 15px;
-    width: 89px;
-    height: 89px;
-    & img {
-      width: 70px;
-    }
-  }
-}
-
-.section04 {
-  background: linear-gradient(180deg, rgba(67, 163, 85, 0.2) 0%, #FFFFFF 100%), rgba(0, 159, 227, 0.6);
-  box-shadow: inset 0px 4px 4px rgba(45, 47, 44, 0.25);
-  &-title {
-    text-align: center;
-  }
-
-  &-item {
-    margin: 40px auto;
-    & .pictureItem {
-      flex-direction: column-reverse;
-      display: flex;
-      &-description {
-        margin-top: 0;
-        margin-bottom: 50px;
-        min-height: 62px;
-        }
+  
+  &-section03 {
+    // padding: 106px 72px;
+    padding-bottom: 50px;
+    &_background {
+      & img {
+        width: 80%;
+        margin: 0 auto;
       }
-    }  
-}
-
-
-/*
-  Responsive
-*/
-
-@media screen and(max-width:  $grid-width) {
-
+    }
+    &_item {
+      text-align: center;
+      margin-top: 70px;
+      & span {
+        font-weight: 700;
+        text-transform: capitalize;
+        line-height: 25px;
+        font-size: 14px;
+      }
+    }
+    & .titleLeft_content{
+      margin: 0 0 30px 0;
+    }
+    & .littlePastille {
+      margin-bottom: 15px;
+      width: 89px;
+      height: 89px;
+      & img {
+        width: 70px;
+      }
+    }
+  }
+  
+  &-section04 {
+    background: linear-gradient(180deg, rgba(67, 163, 85, 0.2) 0%, #FFFFFF 100%), rgba(0, 159, 227, 0.6);
+    box-shadow: inset 0px 4px 4px rgba(45, 47, 44, 0.25);
+    &-title {
+      text-align: center;
+    }
+  
+    &-item {
+      margin: 40px auto;
+      & .pictureItem {
+        flex-direction: column-reverse;
+        display: flex;
+        &-description {
+          margin-top: 0;
+          margin-bottom: 50px;
+          min-height: 62px;
+          }
+        }
+      }  
+  }
+  
+  &-section05 {
+    text-align: center;
+  }
+  
+  
+  /*
+    Responsive
+  */
+  
+  @media screen and(max-width:  $grid-width) {
+  
+  }
 }
