[tc] /apropos styles + path scss background change

--- a/src/assets/styles/components/_intro.scss
+++ b/src/assets/styles/components/_intro.scss
@@ -6,7 +6,7 @@
     top: 0;
     z-index: -1;
     &.activeBackgroundHome{
-        background: url('/assets/images/tc-home-intro-background.jpg') center, no-repeat;
+        background: url('~images/tc-home-intro-background.jpg') center, no-repeat;
         background-size: cover;
     }
     &.activeBackgroundAbout{
