--- a/src/views/layouts/master.pug
+++ b/src/views/layouts/master.pug
@@ -78,7 +78,7 @@ html(lang='en')
   body
 
     //- Header
-    +header()
+    //- +header()
 
     //- block header intro
     //- include ../components/intro.pug
